erro na versão subida

--- a/resolucao_semisupervised.ipynb
+++ b/resolucao_semisupervised.ipynb
@@ -964,10 +964,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1cb1195f-b483-46a4-9ad5-8494d83b4c30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(830, 20)\n",
+      "(830,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Convertendo as entradas do modelo para NumPy Array, https://scikit-learn.org/stable/modules/generated/sklearn.semi_supervised.LabelPropagation.html\n",
     "X_train_misturado = df_X_train_misturado.to_numpy()\n",
@@ -990,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b4371cf0-f067-43da-b577-6d658af7c186",
    "metadata": {},
    "outputs": [],
@@ -1010,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4313c270-a2b0-4f60-b138-3edda5c2359b",
    "metadata": {},
    "outputs": [],
@@ -1039,10 +1048,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "75f2ab2a-8e4f-4d0c-a333-4f3bfa6d5dcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 82.143\n"
+     ]
+    }
+   ],
    "source": [
     "model2 = LogisticRegression()\n",
     "model2.fit(X_train_misturado, tran_labels)\n",
@@ -1062,10 +1079,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "454ba0c2-0d3b-4741-af27-89b7a456e15f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                   score-m  score-s  ft-m  ft-s  pt-m  pt-s\n",
+      "layer-1  adaboostclassifier           0.93     0.02  0.95  0.05  0.01  0.00\n",
+      "layer-1  baggingclassifier            0.95     0.02  0.25  0.02  0.01  0.00\n",
+      "layer-1  decisiontreeclassifier       0.93     0.02  0.02  0.01  0.00  0.00\n",
+      "layer-1  extratreesclassifier         0.95     0.03  0.18  0.03  0.00  0.00\n",
+      "layer-1  gaussiannb                   0.90     0.03  0.01  0.00  0.00  0.00\n",
+      "layer-1  kneighborsclassifier         0.95     0.02  0.00  0.00  0.03  0.01\n",
+      "layer-1  logisticregression           0.94     0.02  0.01  0.00  0.00  0.00\n",
+      "layer-1  randomforestclassifier       0.95     0.01  0.15  0.01  0.00  0.00\n",
+      "layer-1  svc                          0.97     0.02  0.04  0.00  0.00  0.00\n",
+      "\n",
+      "AUC: 83.571\n"
+     ]
+    }
+   ],
    "source": [
     "# Lista de modelos base\n",
     "def get_models():\n",
